# adastand_pack

./: README.md  setup.cfg
dloptimizer/: __init__.py
dloptimizer/chainer/: __init__.py  adam.py  rmsprop.py
dloptimizer/pytorch/: __init__.py  adastand.py  sdprop.py
dloptimizer/tensorflow/: __init__.py  adastand.py  sdprop.py
dloptimizer/tensorflow/keras/: adastand.py  sdprop.py
