[metadata]
name = dloptimizer
version = 0.0.1
url = http://www.sic.ecl.ntt.co.jp/
author = NTT Software Innovation Center
description = Algorithm to improve learning efficiency
long_description = file: README.md
long_description_content_type = text/markdown
platforms = any

[options]
packages = find:

[options.extras_require]
chainer = chainer
torch = torch
tensorflow = tensorflow

[options.packages.find]
include = dloptimizer
    dloptimizer.chainer
    dloptimizer.pytorch
    dloptimizer.tensorflow
    dloptimizer.tensorflow.keras
